k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: app
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  tls:
    - hosts:
        - app.local
      secretName: app-local-tls
  rules:
    - host: app.local
      http:
        paths:
          - path: /ums
            pathType: Prefix
            backend:
              service:
                name: ums-service
                port:
                  number: 8000
          - path: /innotter
            pathType: Prefix
            backend:
              service:
                name: innotter-service
                port:
                  number: 8002
